fix(api): remove UTF-8 BOM and enable board/transition